--- a/src/templates/parts/nav.pug
+++ b/src/templates/parts/nav.pug
@@ -4,3 +4,4 @@ nav.nav.--fixed
     ul.right.hide-on-med-and-down
       li
         a(href="/order.html") Корзина
+        .amount-in-cart <span> 0 </span>
