--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,3 +49,31 @@
     margin-left: auto;
   }
 }
+
+.nav li {
+  position: relative;
+}
+
+.nav .amount-in-cart {
+  color: white;
+  background-color: red;
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -15%;
+  line-height: 0;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  span {
+    width: 11px;
+  }
+}
