--- a/src/templates/components/app.pug
+++ b/src/templates/components/app.pug
@@ -1,5 +1,8 @@
 #app.app
-  #btn-sort-price-to-up.btn.blue sort to up 
-  #btn-sort-price-to-down.btn.blue sort to down 
+  .app__sort-panel
+    #btn-sort-price-to-up.app__sort-option.btn.blue sort to up 
+    #btn-sort-price-to-down.app__sort-option.btn.blue sort to down 
+    #btn-show-goods-available.app__sort-option.btn.blue в наличии
+    #btn-reset-filters.app__sort-option.btn.green сбросить фильтры
   #goods-pagination
   #goods.goods
