--- a/src/templates/components/app.pug
+++ b/src/templates/components/app.pug
@@ -1,8 +1,7 @@
 #app.app
-  .app__sort-panel
-    #btn-sort-price-to-up.app__sort-option.btn.blue sort to up 
-    #btn-sort-price-to-down.app__sort-option.btn.blue sort to down 
-    #btn-show-goods-available.app__sort-option.btn.blue в наличии
-    #btn-reset-filters.app__sort-option.btn.green сбросить фильтры
+  include ../parts/filterPanel
+  
   #goods-pagination
   #goods.goods
+
+  .order-alert
