--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -6,7 +6,7 @@ head
   meta(http-equiv='x-ua-compatible', content='ie=edge')
   link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css")
 
-body
+body.common-body
   include ./parts/nav
   include ./components/app
 
