--- a/src/templates/order.pug
+++ b/src/templates/order.pug
@@ -6,7 +6,12 @@ head
   meta(http-equiv='x-ua-compatible', content='ie=edge')
   link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css")
 
-body
+body.common-body
   include ./parts/nav
+  include ./parts/filterPanel
+  
+  #cart.cart
+    .cart__total-price
 
 script(src="js/main.js")
+script(src="js/cart.js")
