--- a/src/templates/order.pug
+++ b/src/templates/order.pug
@@ -10,8 +10,8 @@ body.common-body
   include ./parts/nav
   include ./parts/filterPanel
   
-  #cart.cart
-    .cart__total-price
+  #cart-total.cart-total-price
+  #cart.cart.goods
 
 script(src="js/main.js")
 script(src="js/cart.js")
