--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -10,4 +10,4 @@ body.common-body
   include ./parts/nav
   include ./components/app
 
-script(src="js/main.js" type="module")
+script(src="js/main.js")
