--- a/src/templates/order.pug
+++ b/src/templates/order.pug
@@ -6,11 +6,11 @@ head
   meta(http-equiv='x-ua-compatible', content='ie=edge')
   link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css")
 
-body.common-body
+body.common-body.cart-page
   include ./parts/nav
   include ./parts/filterPanel
   
-  #cart-total.cart-total-price
+  h4#cart-total.cart-total-price
   #cart.cart.goods
 
 script(src="js/main.js")
