--- a/src/templates/order.pug
+++ b/src/templates/order.pug
@@ -13,5 +13,7 @@ body.common-body.cart-page
   h4#cart-total.cart-total-price
   #cart.cart.goods
 
-script(src="js/main.js")
+  #goods(style="display:none")
+
+//- script(src="js/main.js")
 script(src="js/cart.js")
