--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -10,4 +10,5 @@ body.common-body
   include ./parts/nav
   include ./components/app
 
-script(src="js/main.js")
+script(type="module" src="js/main.js")
+ 
