--- a/src/templates/components/app.pug
+++ b/src/templates/components/app.pug
@@ -2,7 +2,7 @@
   h4#cart-total.cart-total-price
   include ../parts/filterPanel
   .goods-pagintation-wrapper
-    button#goods-pagination-to-begin(value="1") В начало
+    button#goods-pagination-to-begin В начало
     #goods-pagination
     button#goods-pagination-to-end В конец
   #goods.goods
