--- a/src/templates/order.pug
+++ b/src/templates/order.pug
@@ -15,5 +15,4 @@ body.common-body.cart-page
 
   #goods(style="display:none")
 
-//- script(src="js/main.js")
-script(src="js/cart.js")
+script(type="module" src="js/cart.js")
